--- a/src/components/Map/MapView.scss
+++ b/src/components/Map/MapView.scss
@@ -2,6 +2,8 @@
   // position: relative;
   // width: 100%;
   // height: 500px;
+  height: 500px;
+  width: 500px;
 
   .leaflet-map-pane {
        z-index: 2 !important;
@@ -15,4 +17,31 @@
     width: 100%;
     height: 100%;
   }
+
+
+  @media only screen and (max-width: 1330px) {
+    height: 450px;
+    width: 450px;
+
+    #mapid {
+      margin-left: 0 !important; 
+    }
+  }
+
+  @media only screen and (max-width: 975px) {
+    height: 450px;
+    width: 605px;
+    margin: 0 auto;
+  }
+
+  @media only screen and (max-width: 880px) {
+    height: 450px;
+    width: 440px;
+  }
+
+  @media only screen and (max-width: 790px) {
+    height: 430px;
+    width: 400px;
+  }
+
 }
