--- a/src/components/common/Footer/Footer.scss
+++ b/src/components/common/Footer/Footer.scss
@@ -57,3 +57,38 @@
 
   .bottom { text-align: center; }
 }
+
+@media only screen and (max-width: 790px) {
+  .footer {
+    .top {
+      flex-direction: column;
+      align-items: center;
+
+      .flex {
+        text-align: center;
+
+        &:last-child {
+          margin-top: 100px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .footer {
+    .top {
+      .flex {
+        flex-direction: column;
+
+        .flex-column {
+
+          &.right {
+            margin-left: 0;
+            margin-top: 50px;
+          }
+        }
+      }
+    }
+  }
+}
