--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -11,8 +11,27 @@
   }
 }
 
+@keyframes menu-grow {
+  from {
+    height: 0;
+  }
+  to {
+    height: 100vh;
+  }
+}
+
 .header {
+
   .content-wrapper {
+
+    .menu-btn {
+      display: none;
+    }
+
+    .menu-icon {
+      display: none;
+    }
+    
     .nav-item {
       font-size: $font-size-medium-small;
       color: $black;
@@ -169,17 +188,25 @@
 }
 
 
-    @media only screen and (max-width:700px) {
-      .header {
-        .content-wrapper {
-          .nav-item {
-            font-size: 11px;
-            padding: 30px 9px;
-          }
+  @media only screen and (max-width:700px) {
+    .header {
+      .content-wrapper {
+        .nav-item {
+          font-size: 11px;
+          padding: 30px 9px;
         }
       }
     }
+  }
 
-    @include mobile-break {
+  @include mobile-break {
+    .header {
 
+      &.open {
+
+      }
+      .content-wrapper {
+
+      }
     }
+  }
