Fix responsive styling for header-area on AboutUsPage.

--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -1212,9 +1212,14 @@
               text-align: center;
               align-self: center;
               margin-left: 0;
+              margin-top: 105px;
 
               .text-item {
-                margin-top: 55px;
+                margin:  0;
+
+                &:not(:last-child) {
+                  margin: 0 0 55px 0;
+                }
               }
             }
           }
