--- a/src/components/Pages/AboutUsPage/AboutUsPage.scss
+++ b/src/components/Pages/AboutUsPage/AboutUsPage.scss
@@ -139,6 +139,36 @@
     }
   }
 
+  @media only screen and (max-width: 1700px) {
+    .header-area {
+      .about-us-img {
+        .about-img {
+          width: 700px;
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 1440px) {
+    .header-area {
+      .about-us-img {
+        .about-img {
+          width: 600px;
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 1210px) {
+    .header-area {
+      .about-us-img {
+        .about-img {
+          width: 550px;
+        }
+      }
+    }
+  }
+
   @media only screen and (max-width: 1320px) {
     .header-area {
 
@@ -188,11 +218,59 @@
     }
   }
 
+@media only screen and (max-width: 1115px) {
+  .header-area {
+    .about-us-img {
+      .about-img {
+        width: 450px;
+        height: 450px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1130px) {
+  .header-area {
+    .about-us-img {
+      .about-img {
+        width: 350px;
+        margin-left: 30px;
+        height: 450px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .header-area {
+    .about-us-img {
+      .about-img {
+        width: 450px;
+        height: 500px;
+        object-fit: cover;
+        margin-left: 40px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1065px) {
+  .header-area {
+    .about-us-img {
+      .about-img {
+        width: 400px;
+        margin-left: 80px;
+      }
+    }
+  }
+}
+
   @media only screen and (max-width: 975px) {
     .header-area {
-      .about-img {
-        width: 388px;
-        height: 458px;
+      .about-us-img {
+        .about-img {
+          margin-left: 0;
+        }
       }
 
       .links-area {
@@ -227,6 +305,11 @@
 
   @media only screen and (max-width: 880px) {
     .header-area {
+      .about-us-img {
+        .about-img {
+          width: 450px;
+        }
+      }
 
       .links-area {
         margin-left: 88px;
@@ -240,7 +323,7 @@
           .arrow {
             margin-left: -120px;
           }
-          
+
           .lines {
             .medium-line:not(:last-child) {
               margin-right: 90px;
@@ -249,5 +332,62 @@
         }
       }
     }
+  }
+
+  @media only screen and (max-width: 820px){
+    .header-area {
+      .links-area {
+        margin-left: 70px;
+        .long-line:last-child {
+          margin-left: -36px;
+        }
+
+        .text-line-area {
+
+          .lines {
+            margin-left: -40px;
+
+            .medium-line:not(:last-child) {
+              margin-right: 83px;
+            }
+          }
+
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 700px) {
+    .header-area {
+      .links-area {
+        .long-line:last-child {
+          margin-left: -88px;
+        }
+
+        .text-line-area {
+
+          .text {
+            margin-left: -73px;
+          }
+
+          .arrow {
+            margin-left: -205px;
+          }
+
+          .lines {
+            margin-left: -55px;
+
+            .medium-line:not(:last-child) {
+              margin-right: 71px;
+            }
+          }
+
+        }
+      }
+    }
+  }
+
+  @include mobile-break {
+
   }
 }
