--- a/src/components/Pages/AboutUsPage/AboutUsPage.scss
+++ b/src/components/Pages/AboutUsPage/AboutUsPage.scss
@@ -172,6 +172,10 @@
   @media only screen and (max-width: 1320px) {
     .header-area {
 
+      .text {
+        font-size: $font-size-title - 1;
+      }
+
       .about-us-img {
         width: 550px;
       }
@@ -216,6 +220,31 @@
         }
       }
     }
+
+    .content-wrapper {
+      .width-container {
+
+        .page-content {
+
+          .page-text {
+            margin-bottom: 50px;
+            font-size: $font-size-medium-small;
+            text-align: justify;
+            max-width: 70vw;
+          }
+        }
+
+        .page-about {
+          .page-title {
+            font-size: $font-size-title - 1;
+          }
+
+          .title-about {
+            font-size :$font-size-medium-small;
+          }
+        }
+      }
+    }
   }
 
 @media only screen and (max-width: 1115px) {
@@ -235,7 +264,6 @@
       .about-img {
         width: 350px;
         margin-left: 30px;
-        height: 450px;
       }
     }
   }
@@ -287,7 +315,7 @@
           }
 
           .arrow {
-            margin-left: -100px;
+            margin-left: -115px;
           }
 
           .lines {
@@ -332,10 +360,30 @@
         }
       }
     }
+
+    .content-wrapper {
+      .width-container {
+
+        .page-about {
+          margin-left: 140px;
+        }
+
+        .page-content {
+          .page-text {
+            font-size: $font-size-medium-small - 0.1;
+          }
+        }
+      }
+    }
   }
 
   @media only screen and (max-width: 820px){
     .header-area {
+
+      .text {
+        font-size: $font-size-title - 1.5;
+      }
+
       .links-area {
         margin-left: 70px;
         .long-line:last-child {
@@ -343,6 +391,14 @@
         }
 
         .text-line-area {
+
+          .text {
+            margin-left: -55px;
+          }
+
+          .arrow {
+            margin-left: -145px;
+          }
 
           .lines {
             margin-left: -40px;
@@ -388,6 +444,28 @@
   }
 
   @include mobile-break {
+    .header-area {
+      .about-img {
+        display: none;
+      }
+    }
+    .content-wrapper {
+      .width-container {
 
+        .page-content {
+          .lines {
+            display: none;
+          }
+
+          .page-text {
+            max-width: 100%;
+
+            .text-content {
+              max-width: 100vw;
+            }
+          }
+        }
+      }
+    }
   }
 }
