Add responsive styling for LawyersPage.

--- a/src/components/Pages/AboutUsPage/AboutUsPage.scss
+++ b/src/components/Pages/AboutUsPage/AboutUsPage.scss
@@ -445,7 +445,7 @@
 
   @include mobile-break {
     .header-area {
-      .about-img {
+      .about-us-img {
         display: none;
       }
     }
