--- a/src/components/Pages/LawyerPage/LawyerPage.scss
+++ b/src/components/Pages/LawyerPage/LawyerPage.scss
@@ -103,4 +103,92 @@
       }
     }
   }
+
+  @media only screen and (max-width: 948px) {
+    .container {
+      .width-container {
+        .gray-title {
+          font-size: $font-size-title - 1;
+        }
+      }
+    }
+
+    .react-select__control {
+      .react-select__placeholder {
+        font-size: $font-size-small-regular;
+      }
+    }
+
+    .width-container {
+
+      .area-title {
+        font-size: $font-size-title - 2.5;
+      }
+
+      .lawyers-container {
+        justify-content: center;
+
+        .single-lawyer {
+          .middle {
+            .lawyer-about {
+              font-size: $font-size-extra-large;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 820px) {
+    .container {
+      .width-container {
+        .gray-title {
+          font-size: $font-size-title - 2;
+        }
+      }
+    }
+
+    .react-select__control {
+      .react-select__placeholder {
+        font-size: $font-size-small-regular - 0.2;
+      }
+    }
+    .width-container {
+      .area-title {
+        font-size: $font-size-title - 3;
+      }
+
+      .lawyers-container {
+        .single-lawyer {
+          .middle {
+            .lawyer-about {
+              font-size: $font-size-extra-large - 0.2;
+            }
+          }
+        }
+      }
+    }
+  }
+
+
+  @include mobile-break {
+    .container {
+      .width-container {
+        .gray-title {
+          font-size: $font-size-title - 2.3;
+        }
+      }
+    }
+
+    .react-select__control {
+      .react-select__placeholder {
+        font-size: $font-size-small-regular - 0.4;
+      }
+    }
+    .width-container {
+      .area-title {
+        font-size: $font-size-title - 3.5;
+      }
+    }
+  }
 }
