--- a/src/components/Pages/AboutUsPage/AboutUsPage.scss
+++ b/src/components/Pages/AboutUsPage/AboutUsPage.scss
@@ -64,7 +64,7 @@
   }
   .content-wrapper {
     .big-yellow-box {
-      max-width: 430px;
+      width: 37vw;
       max-height: 1471px;
       width: 100%;
       height: 100%;
