--- a/src/components/Pages/ContactPage/ContactPage.scss
+++ b/src/components/Pages/ContactPage/ContactPage.scss
@@ -108,4 +108,113 @@
 
     }
   }
+
+  @media only screen and (max-width: 1100px) {
+    .container {
+      .width-container {
+        .gray-title {
+          font-size: $font-size-title - 1.5;
+        }
+      }
+    }
+    .content-wrapper {
+      .middle {
+        flex-direction: column;
+        align-items: center;
+
+        .left {
+          flex-direction: row;
+          justify-content: space-between;
+          margin: 0 0 50px 0;
+
+          .bottom {
+            margin-top: 20px;
+            flex-direction: row-reverse;
+          }
+
+          .med-line {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 955px) {
+    .width-container {
+      .content-wrapper {
+        .middle {
+          .small-line {
+            width: 388px;
+          }
+
+          .left {
+            flex-direction: column;
+            width: 100%;
+
+            .bottom {
+              justify-content: space-between;
+            }
+
+            .top {
+              justify-content: space-around;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 885px) {
+    .width-container {
+      .content-wrapper {
+        .middle {
+          .small-line { width: 180px; }
+        }
+      }
+    }
+  }
+
+  @include mobile-break {
+    .width-container {
+      .content-wrapper {
+
+        .long-line {
+
+          &:first-child { margin-bottom: 30px; }
+          &:last-child { margin: 50px 0 0 0 }
+        }
+
+        .middle {
+          .small-line {
+            width: 100%;
+            margin: 0;
+            margin-bottom: 50px;
+          }
+
+          .left {
+            .bottom {
+              flex-direction: column;
+
+              .lines {
+                margin-bottom: 30px;
+              }
+
+              .map {
+                margin-left: 0;
+              }
+            }
+
+            .top {
+              flex-direction: column;
+
+              .lines {
+                display: none;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
