--- a/src/components/Pages/AboutUsPage/AboutUsPage.scss
+++ b/src/components/Pages/AboutUsPage/AboutUsPage.scss
@@ -414,6 +414,11 @@
 
   @media only screen and (max-width: 700px) {
     .header-area {
+
+      .about-us-img {
+        display: none;
+      }
+      
       .links-area {
         .long-line:last-child {
           margin-left: -88px;
