--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -1047,8 +1047,11 @@
       .width-container {
         .about-us-flex {
           justify-content: center;
+          text-align: justify;
 
           .text {
+            max-width: 262px;
+
             &:nth-child(2) {
               margin-left: 60px;
             }
@@ -1057,8 +1060,41 @@
             width: 100%;
             height: 400px;
             justify-content: space-between;
-            align-items: center;
             margin-top: 30px;
+
+            .med-hor-line {
+              max-width: 100%;
+              width: 100%;
+            }
+
+            .mid {
+              flex-direction: column;
+              align-items: center;
+
+              .mid-left {
+                align-items: center;
+                max-width: 100%;
+
+                .text {
+                  max-width: 582px;
+                  margin: 20 auto;
+                }
+              }
+
+              .mid-right {
+                width: 100%;
+                max-width: 100%;
+
+                .button-wrapper {
+                  margin: 30px 0px 30px 0px;
+                  justify-content: center;
+
+                  .small-hor-line {
+                    display: none;
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -1314,6 +1350,8 @@
             .mid {
               flex-direction: column;
 
+              width: 100%;
+
               .mid-right {
                 max-width: 100%;
 
@@ -1329,8 +1367,13 @@
                   .button {
                     width: 45%;
                     align-self: center;
-                    margin-bottom: 30px;
                   }
+                }
+              }
+
+              .mid-left {
+                .text {
+                  max-width: 460px;
                 }
               }
 
