--- a/src/components/Pages/AreasPage/AreasPage.scss
+++ b/src/components/Pages/AreasPage/AreasPage.scss
@@ -72,6 +72,8 @@
             }
 
             .react-select__option {
+              font-size: $font-size-medium-small - 0.1;
+              
               &:hover {
                 @include hover-transition;
                 background-color: $dark-gray-hover;
