Add minor css corrections.

--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -1312,6 +1312,7 @@
   .homepage {
 
     .header-area {
+      height: 50vh;
 
       .left {
         margin: 0 auto;
@@ -1446,6 +1447,7 @@
                 }
 
                 .react-select__option {
+                  font-size: $font-size-medium-small;
                   &:hover {
                     @include hover-transition;
                     background-color: $dark-gray-hover;
