--- a/src/components/Pages/LawyerPage/LawyerPage.scss
+++ b/src/components/Pages/LawyerPage/LawyerPage.scss
@@ -27,6 +27,8 @@
     }
 
     .react-select__option {
+      font-size: $font-size-medium-small;
+      
       &:hover {
         @include hover-transition;
         background-color: $dark-gray-hover;
