--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -267,6 +267,8 @@
         top: 0;
         max-height: 100px;
         z-index: 20;
+        box-shadow: 2px 3px 60px 30px #ccc;
+        transition: all 0.3s ease-out;
 
         .line-wrapper {
           display: none;
@@ -274,7 +276,7 @@
 
         &.hidden {
           top: -110px;
-          //transition: .7s ease-in;
+          transition: all 0.5s ease-out;
          }
 
         &.open .width-container {
@@ -313,7 +315,7 @@
             height: 100%;
             padding: 120px 0 50px 0;
             margin-top: 0;
-            transition: .5s ease-in;
+            transition: all .5s ease-in;
             z-index: 20;
 
             .line-wrapper {
