--- a/src/components/ContactUsForm/ContactUsForm.scss
+++ b/src/components/ContactUsForm/ContactUsForm.scss
@@ -4,6 +4,37 @@
 
 
 .form-wrapper {
+
+  .form-item-wrapper {
+    max-height: 50px;
+    height: 100%;
+    padding: 0;
+
+    .input-values {
+      height: 100%;
+      color: $black;
+    }
+
+    .wrapper-error {
+      .input-values {
+        padding: 0;
+      }
+    }
+
+    .form-item {
+      text-align: left;
+      color: $black;
+      padding-left: 10px;
+    }
+
+    .form-item-wrapper-textarea .input-values {
+      font-size: 2rem !important;
+    }
+
+    label {
+      display: none;
+    }
+  }
   .submit-wrapper {
     text-align: right;
     margin-top: 30px;
